# propongo2

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CODE_AUDIT.md  FIXES_APPLIED.md  IMPLEMENTATION_NOTES.md  README.md  bump.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: publish.yml
app/: config.py  export.py  main.py  models.py  snippets.py  utils.py
app/snippets/: deliverables.json  organization.json
app/static/css/: style.css
app/static/js/: app.js  budget.js  gantt.js  snippets.js  tracker.js
app/templates/: base.html  budget.html  custom_sections.html  export_proposal.html  export_tracker.html  index.html  preview.html  qualifications.html  scope.html  templates.html  timeline.html  tracker.html
data/proposals/: 758b1b25-839f-4af0-be64-00f86b8a4b1d.json  ebcc1fc4-af89-44d3-84e9-45fd04028c39.json  jt_institute_08_03_2026.json  test3.json  test4.json  test4_1.json  test5.json
snippets/custom/: 2423d55f.json  53579d03.json  541fbae1.json
tests/: test_export.py  test_main.py
