[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propongo2"
version = "0.1.0"
description = "A local proposal generator for conservation and natural resource projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VR Conservation"},
]
keywords = ["proposal", "generator", "conservation", "budget", "scope"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "flask>=3.0",
    "weasyprint>=60.0",
    "markdown>=3.5",
    "python-docx>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "bump2version>=1.0",
    "twine>=5.0",
    "build>=1.0",
]

[project.scripts]
propongo2 = "app.main:run_server"

[project.urls]
Repository = "https://github.com/VRConservation/propongo2"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
